--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,15 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
 
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring.version>4.3.7.RELEASE</spring.version>
         <mysql-connector-java.version>5.1.26</mysql-connector-java.version>
-        <mybatis.version>3.4.1</mybatis.version>
-        <mybatis-spring.version>1.3.1</mybatis-spring.version>
-
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <freemarker.version>2.3.23</freemarker.version>
         <servlet-api.version>2.4</servlet-api.version>
         <jsp-api.version>2.0</jsp-api.version>
 
@@ -28,7 +27,13 @@
         <fastjson.version>1.1.15</fastjson.version>
         <logback.version>1.2.2</logback.version>
         <druid.version>1.0.18</druid.version>
-        <mybatis-plus.version>2.0.5</mybatis-plus.version>
+        <!--<mybatis-plus.version>2.0.5</mybatis-plus.version>-->
+        <mybatis-plus.version>2.0.2</mybatis-plus.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
+        <kaptcha-version>0.0.9</kaptcha-version>
+        <guava.version>19.0</guava.version>
+        <ehcache.version>2.6.11</ehcache.version>
     </properties>
 
     <dependencies>
@@ -49,19 +54,24 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
 
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis</groupId>-->
-            <!--<artifactId>mybatis</artifactId>-->
-            <!--<version>${mybatis.version}</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis</groupId>-->
-            <!--<artifactId>mybatis-spring</artifactId>-->
-            <!--<version>${mybatis-spring.version}</version>-->
-        <!--</dependency>-->
+        <!-- Apache工具组件 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
 
         <!-- Mybatis -->
         <dependency>
@@ -69,8 +79,18 @@
             <artifactId>mybatis-plus</artifactId>
             <version>${mybatis-plus.version}</version>
         </dependency>
-
-
+        <!-- 文件上传组件 -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
+        <!-- freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
         <!-- Servlet & Jsp -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -84,6 +104,12 @@
             <artifactId>jsp-api</artifactId>
             <version>${jsp-api.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
         </dependency>
 
         <!--xml-->
@@ -131,6 +157,25 @@
             <version>${logback.version}</version>
         </dependency>
 
+        <!-- kaptcha -->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>${kaptcha-version}</version>
+        </dependency>
+        <!-- google -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
+        <!-- ehcache缓存 -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
 
     </dependencies>
     <build>
@@ -169,6 +214,24 @@
             </plugin>
 
         </plugins>
+
+        <!-- 打包包含*.xml -->
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
 
     </build>
 </project>
