--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,6 +1,6 @@
 ################ dcm数据库配置信息 #####################
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/dcm?characterEncoding=UTF-8&rewriteBatchedStatements=true
+db.url=jdbc:mysql://127.0.0.1:3306/dcm_new?characterEncoding=UTF-8&rewriteBatchedStatements=true
 db.username=root
 db.password=Wiser159
 db.initialSize=0
