--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>springServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <!--<servlet>-->
@@ -79,14 +79,14 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/page/admin/adminIndex.jsp</welcome-file>
+        <welcome-file>/WEB-INF/views/login.jsp</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
-        <location>/WEB-INF/page/error/sep_404.jsp</location>
+        <location>/error/404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/WEB-INF/page/error/sep_500.jsp</location>
+        <location>/error/500.jsp</location>
     </error-page>
 </web-app>
