--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -2,14 +2,6 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/dcm_new?characterEncoding=UTF-8&rewriteBatchedStatements=true
 db.username=root
-db.password=Wiser159
-db.initialSize=0
+db.password=root
+
 db.maxActive=10
-db.minIdle=0
-db.testWhileIdle=true
-db.validationQuery=SELECT 1
-db.timeBetweenEvictionRunsMillis=1800000
-db.removeAbandoned=true
-db.removeAbandonedTimeout=300
-db.maxWait=1000
-db.minEvictableIdleTimeMillis=30000
