--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -2,6 +2,6 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/dcm_new?characterEncoding=UTF-8&rewriteBatchedStatements=true
 db.username=root
-db.password=root
+db.password=Wiser159
 
 db.maxActive=10
