--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <guava.version>19.0</guava.version>
         <ehcache.version>2.6.11</ehcache.version>
         <jstl.version>1.2</jstl.version>
+        <shiro-version>1.3.2</shiro-version>
     </properties>
 
     <dependencies>
@@ -181,6 +182,17 @@
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
             <version>${ehcache.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro-version}</version>
         </dependency>
 
     </dependencies>
