--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,11 @@
         <validation-api.version>1.1.0.Final</validation-api.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <kaptcha-version>0.0.9</kaptcha-version>
-        <guava.version>19.0</guava.version>
+        <guava.version>21.0</guava.version>
         <ehcache.version>2.6.11</ehcache.version>
         <jstl.version>1.2</jstl.version>
         <shiro-version>1.3.2</shiro-version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -155,7 +156,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>${junit.version}</version>
         </dependency>
 
         <dependency>
