--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring.version>4.3.7.RELEASE</spring.version>
-        <mysql-connector-java.version>5.1.26</mysql-connector-java.version>
+        <mysql-connector-java.version>5.1.42</mysql-connector-java.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <freemarker.version>2.3.23</freemarker.version>
         <servlet-api.version>2.4</servlet-api.version>
@@ -32,7 +32,7 @@
         <validation-api.version>1.1.0.Final</validation-api.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <kaptcha-version>0.0.9</kaptcha-version>
-        <guava.version>21.0</guava.version>
+        <guava.version>19.0</guava.version>
         <ehcache.version>2.6.11</ehcache.version>
         <jstl.version>1.2</jstl.version>
         <shiro-version>1.3.2</shiro-version>
@@ -216,7 +216,24 @@
                 </configuration>
             </plugin>
 
-            <!-- jerebel maven 插件，用于生成jrebel.xml -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.5</version>
+                <configuration>
+                    <configurationFile>${basedir}/src/main/resources/mybatis/generatorConfig.xml</configurationFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- jerebel maven 插件，用于生成jresystem.xml -->
             <plugin>
                 <groupId>org.zeroturnaround</groupId>
                 <artifactId>jrebel-maven-plugin</artifactId>
